# fastbook

./: .gitignore  Dockerfile  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
